# ClassicGames

./: .gitignore  README.md
2.5DShooter/: .gitignore  CMakeLists.txt  array2d.h  asset_manager.cpp  game.cpp  game.h  game_data.h  game_map_objects.h  game_state.cpp  game_state.h  input_manager.h  main.cpp  main_menu_state.cpp  main_menu_state.h  map_manager.cpp  map_manager.h  settings.h  state_machine.cpp  state_machine.h  string_operations.cpp  string_operations.h
Snake/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  game.cpp  game.h  game_over_state.cpp  game_over_state.h  game_state.cpp  game_state.h  input_manager.cpp  input_manager.h  main.cpp  main_menu_state.cpp  main_menu_state.h  pause_state.cpp  pause_state.h  rectangle.h  settings.h  state.h  state_machine.cpp  state_machine.h
Tetris/: CMakeLists.txt  config_parser.cpp  config_parser.h  game.cpp  game.h  game_scene.cpp  game_scene.h  image_size.h  main.cpp  matrix.h  png_image.cpp  png_image.h  point.h  point_state.h  rectangle.h  scene.h  string_operations.cpp  string_operations.h
Tetris/Configs/: figures  game  window
